# MeshAC

./: .gitignore  CMakeLists.txt  Manifest.toml  MeshAC  Project.toml  README.md
JuliaAC/: AtC.jl  FIO.jl  FIOtmp.jl  JuliaAC.jl  README.md  Solve.jl  Testing.jl  adaptive.jl  beta.jl  continuum.jl  cube.jl  dihole.jl  functions.jl  geomDealII.jl  utils.jl  visualization.jl
examples/: test.jl  testCB.jl  test_adaptive.jl  test_multi_grid.jl
src/: CommandParser.cpp  CommandParser.h  Core.cpp  Core.h  CoreIO.cpp  CoreIO.h  Element.h  GroupEntity.h  MeshRefiner.cpp  MeshRefiner.h  MeshSwapper.cpp  MeshSwapper.h  PointSet.cpp  PointSet.h  SpatialSearcher.cpp  SpatialSearcher.h  SubEntities.h  SubEntity.h  SurfaceMesh.cpp  SurfaceMesh.h  TetgenTool.cpp  TetgenTool.h  TetgenTools.h  TriangleTool.cpp  TriangleTool.h  Vector3D.h  aabbox.h  common.h  main.cpp  mesh.cpp  mesh.h  mesher3d_core.cpp  mesher3d_core.h  mesher3d_io.cpp  mesher3d_io.h  quality.h  sphere.cpp  sphere.h  surfaceMesh.h
